data/derived/fa15/progs/unify/prog0104.ml.out
Characters 94-96:
  if d < 0 then (clone 0 (0-d))@l1 * l2 else l1 * (clone 0 d)@l2;;
                                ^^
Error: This expression has type 'a list
       but an expression was expected of type int
